# UBA

./: README.md
Algebra Lineal Computacional/: Experiments.ipynb  Informe.md  README.md  pyproject.toml
Algebra Lineal Computacional/src/: alc.py  headLayer.py  preprocess.py  pseudoInversa.py
Algebra Lineal Computacional/src/tp_alc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Algebra Lineal Computacional/tests/: test_qr.py  test_svd.py
Arquitectura y Organizacion del computador/: ResolucionParcial.md
Arquitectura y Organizacion del computador/apuntes/: 4.21.txt
Arquitectura y Organizacion del computador/guia-ASM-main/src/2 - ABI/: ABI.md  main.c
Arquitectura y Organizacion del computador/guia-ASM-main/src/5 - Pila/: Pila.md
AyOC/apuntes/: 5.12.txt  5.15.txt
AyOC/guia-ASM-main/src/1 - Introducción/: Introduccion.md
AyOC/guia-ASM-main/src/2 - ABI/: ABI.asm
AyOC/guia-ASM-main/src/3 - Alineación y Estructuras/: Estructuras.asm  Estructuras.h  main.c
AyOC/guia-ASM-main/src/5 - Pila/: pasos.txt
ISW/linux64/linux64/: run.sh
ISW/linux64/linux64-UserFiles/UserChanges/: misSoluciones.user.changes
SO/Ejercicio1/: mini-shell
SO/Ejercicio3/: cliente.c  servidor
SO/taller-syscalls/: ej1.c
Sistemas Operativos/Ejercicio1/: mini-shell.c
Sistemas Operativos/Ejercicio2/: anillo_alu  anillo_alu.c
Sistemas Operativos/Ejercicio3/: cliente  servidor.c
